# mitko

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_migration.py  002_merge_profile_into_user.py  003_add_scheduled_for_to_conversations.py  004_add_generations_table.py  005_remove_deprecated_structured_data_column.py  006_add_status_message_id_and_message_count_.py  007_remove_message_count_at_start.py  008_move_status_message_id_to_conversation.py  009_add_placeholder_message_id_to_generation.py  010_refactor_message_storage.py  011_add_usage_tracking_to_generations.py  012_add_cost_field_to_generations.py  013_rename_cost_to_cost_usd.py  014_add_last_response_id_to_conversations.py  015_remove_last_response_id.py  016_add_last_responses_api_response_id.py  017_add_history.py  018_populate_history.py  019_populate_history_for_legacy.py  020_rename_history_to_message_history_and_.py  021_add_started_at_to_generations.py  022_add_profile_parts.py  023_add_profile_versioning.py  024_make_conversation_id_nullable.py  025_add_match_id_to_generations_table.py  026_add_matching_round_make_user_b_nullable.py  027_add_latest_profile_updated_at_to_matches.py  028_add_admin_thread_id_to_conversations.py  029_rename_conversations_to_chats.py  030_add_flags_to_users.py  031_add_user_groups_and_announces.py  032_rename_source_message_id_to_thread_id_in_announces.py  033_remove_is_complete_add_ready_updated_states.py  034_rename_thread_id_to_source_message_id_in_announces.py  035_rename_announces_to_announcements.py  036_add_system_message_to_announcements.py  037_add_username_to_users.py  038_add_omit_pitch_in_instructions_to_chat.py  039_add_ondelete_constraints_to_foreign_keys.py  040_fix_generation_fks_to_cascade.py  (+1 more)
devops/: docker-compose.pgvector.yml
docs/: 250219_tests.md  BACKLOG.md  mitko_it_matchmaker_bot_5b3a8680.plan.md  refactor_message_history_plan.md
docs/marketing/: linkedin_260302_positioning-question.md  linkedin_260303_meta-post.md  linkedin_260304_chat-ethics.md
src/mitko/: config.py  db.py  i18n.py  main.py  settings_instance.py
src/mitko/agents/: __init__.py  chat_agent.py  config.py  conversation_agent.py  models.py  profile_agent.py  qualifier_agent.py  rationale_agent.py  summary_agent.py
src/mitko/bot/: activation.py  admin.py  announce.py  announcements.py  bot_instance.py  conversation.py  core.py  errors.py  handlers.py  keyboards.py  mirroring_middleware.py  utils.py
src/mitko/i18n/: __init__.py  base.py  en.py  ru.py
src/mitko/jobs/: __init__.py  generation.py  generation_processor.py  matching.py  matching_scheduler.py
src/mitko/llm/: __init__.py  anthropic.py  base.py  embeddings.py  openai.py
src/mitko/models/: __init__.py  announce.py  announcement.py  base.py  chat.py  conversation.py  generation.py  match.py  profile.py  types.py  user.py  user_group.py
src/mitko/runtime/: __init__.py  base.py  polling.py  webhook.py
src/mitko/services/: admin_channel.py  admin_group.py  base_generation.py  bot_throttle.py  chat_based_generation.py  chat_generation.py  chat_utils.py  conversation_generation.py  conversation_utils.py  cv_parser.py  generation.py  generation_orchestrator.py  match_generation.py  match_intro_generation.py  match_result.py  matcher.py  profiler.py
src/mitko/types/: __init__.py  messages.py
src/mitko/utils/: __init__.py  async_utils.py  collection_utils.py  (+2 more)
tests/: conftest.py  test_conversation_persistence.py  test_database.py  test_multi_role.py  test_placeholder.py
tests/handlers/: helpers.py  mocked_bot.py  test_conversation.py  test_match_acceptance.py  test_start_command.py
tests/integration/: test_admin_group.py  test_match_generation_admin.py  test_matcher.py  test_profiler.py
typings/apscheduler/: __init__.pyi  job.pyi
typings/pgvector/: __init__.pyi  sqlalchemy.pyi
(+2 files in other folders)
