[project]
name = "mitko"
version = "0.1.0"
description = "IT Matchmaker Telegram Bot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiogram>=3.13.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "pgvector>=0.3.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "pydantic-ai>=1.37.0",
    "sqlmodel>=0.0.31",
    "genai-prices>=0.0.49",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pyright[nodejs]>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mitko"]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modernize code)
    "B",   # flake8-bugbear (common bugs)
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line-too-long
    "UP045", # Optional[X] -> X | None (breaks SQLModel mapper resolution)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnusedVariable = true
reportUnusedImport = true
stubPath = "typings"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest-async-sqlalchemy>=0.2.0",
    "factory-boy>=3.3.0",
    "pytest-cov>=6.0.0",
]
